# furiaopt

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
config/: config.json
examples/: qp_2d_trajectory_smoothing.cpp  qp_robot_balance.cpp  rosenbrock.cpp
include/: compute_gradient.hpp  config_loader.hpp  constrained_solver.hpp  direction_strategy.hpp  generalization_method.hpp  solver_config.hpp  types.hpp  unconstrained_solver.hpp
include/solvers/: constrained_solver.hpp  lp_solver.hpp  qp_solver.hpp  unconstrained_solver.hpp
src/: constrained_solver.cpp  direction_strategy.cpp  unconstrained_solver.cpp
src/solvers/: constrained_solver.cpp  lp_solver.cpp  qp_solver.cpp  unconstrained_solver.cpp
tests/: test_furiaopt.cpp
visualizers/: qp_2d_trajectory_smoothing.py  rosenbrock.py
